--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Aleksandar Bayrev <aleksandarbayrev@gmail.com>",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@types/jest": "~28.1.3",
     "@types/node": "~16.11.41",
     "@webpack-cli/generators": "~2.5.0",
+    "ts-jest": "~28.0.5",
     "typescript": "~4.7.4",
     "webpack": "~5.73.0",
     "webpack-cli": "~4.10.0"
